(server): clean up
